[tool.poetry]
name = "diploma"
version = "0.1.0"
description = "Дипломный проект Овинов В.В."
authors = ["vovinov <v.v.ovinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
